[project]
name = "agente-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "HeltonMaxwell"}
]
readme = "README.md"
requires-python = "3.13.5"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
black = "^25.1.0"
langchain-openai = "^0.3.28"
beautifulsoup4 = "^4.13.4"
poetry-plugin-dotenv = "^3.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
